--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -31,4 +31,26 @@
     <string name="googlelogo">Google</string>
     <string name="complete_the_sign_up_process_to_get_started">Complete the sign up process to get started</string>
     <string name="create_an_account">Create an account</string>
+    <string name="full_name">Full name</string>
+    <string name="welcome_back">Welcome back</string>
+    <string name="fill_in_your_emails_and_password_to_continue">Fill in your email and password to continue</string>
+    <string name="remember_password">Remember password</string>
+    <string name="forgot_password">Forgot Password?</string>
+    <string name="googlelogodesk">Google</string>
+    <string name="redi_express_logo">Redi Express logo</string>
+    <string name="log_in">Log in</string>
+    <string name="remember_password_back_to">Remember password? Back to</string>
+    <string name="send_otp">Send OTP</string>
+    <string name="enter_your_email_address">Enter your email address</string>
+    <string name="resend">resend</string>
+    <string name="otp_verification">OTP Verification</string>
+    <string name="if_you_didn_t_recieve_code">If you didn\'t recieve code,</string>
+    <string name="set_new_password">Set New Password</string>
+    <string name="enter_the_6_digits_numbers_sent_to_your_email">Enter the 6 digits numbers sent to your email</string>
+    <string name="enter_new_password">Enter new password</string>
+    <string name="iconfirm_password">Confirm Password</string>
+    <string name="emptyvalue" />
+    <string name="signup">Sign Up</string>
+    <string name="mail_ru">********@mail.ru</string>
+    <string name="new_password">New Password</string>
 </resources>
